# parallel_multiscale_approximation

./: CMakeLists.txt  cuda_test.cu  data_2D.csv  data_2D_few.csv  data_3D.csv  evaluated_data_2D.csv  evaluated_data_2D_few.csv  evaluated_data_3D.csv  main.c  multiscale_structure.h  parallel_multiscale_approximation.c  wendland_functions.h
2D_few_domain/: approximation_4_evaluated_in_domain_2D_few.csv
